# hamiltonian-ai

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
applications/credit-scoring/: Credit_scoring_FM12_v1.ipynb  Credit_scoring_FM12_v2.ipynb  Credit_scoring_FM36_v1.ipynb  Credit_scoring_FM60_v1.ipynb  README.md
docs/: gen_ref_pages.py  index.md  papers.md
docs/getting-started/: installation.md  quickstart.md
docs/javascripts/: mathjax.js
docs/limits/: index.md
docs/optimizer/: benchmark.md  usage.md
docs/reasoning/: index.md
docs/stylesheets/: extra.css
examples/: optimizer_minimal.py
papers/: README.md
src/hamiltonian_ai/: __init__.py
src/hamiltonian_ai/optimizer/: __init__.py  optimizer.py
studies/geometry-limits/: README.md
studies/reasoning-geometry/: README.md
tests/: test_optimizer.py
